Add new recipe pages Update images Remove Broken Link
Created new recipe pages: chicken-quesadilla and chicken-tortilla-soup. Added images for pages and updated image for cheesy-bakes-ziti page. Removed broken link on cheesy-baked-ziti page.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-
-    <a href="recipes/cheesy-baked-ziti.html">Cheesy Baked Ziti</a>
+    <h3>Our Curated List:</h3>
+    <ul>
+        <li><a href="recipes/cheesy-baked-ziti.html">Cheesy Baked Ziti</a></li>
+        <li><a href="recipes/chicken-quesadillas.html">Chicken Quesadillas</a></li>
+        <li><a href="recipes/chicken-tortilla-soup.html">Chicken Tortilla Soup</a></li>
+    </ul>
 </body>
 </html>
