--- a/recipes/cheesy-baked-ziti.html
+++ b/recipes/cheesy-baked-ziti.html
@@ -35,8 +35,14 @@
     </ol>
 
     <a href="../">Return to Home Page</a>
+    
+    <!--link not functioning as intended, saving for future use
+
     <p></p>
+    
     <a href="#Header">Return to Top</a>
+
+    -->
 
 </body>
 </html>
